# webdev-lab-api

./: .env.example  .gitignore  README.md  pyproject.toml
comments/: admin.py  apps.py  managers.py  models.py  pagination.py  serializers.py  service.py  tasks.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options.py  0003_alter_comment_is_moderated.py
core/: admin.py  constants.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  utils.py
core/migrations/: 0001_initial.py  0002_view_datetime_created.py
news/: admin.py  consumers.py  models.py  pagination.py  routing.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_news_author.py
service/: asgi.py  celery.py  settings.py  urls.py
templates/emails/: daily_statistics.txt  new_comment.txt
users/: admin.py  serializers.py  urls.py
